<resources>
    <string name="web_client_id" translatable="false">76276922541-09csge1004nnptjognm1am0t5gv240kb.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">278409073993872</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb485863972787866</string>
    <string name="terms_and_conditions_url" translatable="false">
        https://www.websitepolicies.com/policies/view/RdFNkzUb
    </string>
    <string name="app_name">The National Mainstream</string>
    <string name="shared_name" translatable="false">The National Mainstream</string>
    <string name="more">More</string>
    <string name="notification_indicator">notification indicator</string>
    <string name="notifications">notifications</string>
    <string name="profile_image">profile image</string>
    <string name="record_audio_message">record audio message</string>
    <string name="text_message">Text Message …</string>
    <string name="attach_files">Attach files</string>
    <string name="send_message">Send Message</string>
    <string name="message_deleted">Message deleted</string>
    <string name="message_send_empty">You can\'t send an empty message</string>
    <string name="message_send_failed">Failed to send message!</string>
    <string name="message_load_failed">Failed to load messages!</string>
    <string name="message_delete">Do you want to delete this message?</string>
    <string name="new_group">New Group</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="chosen_image">Chosen image</string>
    <string name="message_image">message image</string>
    <string name="video">video</string>
    <string name="audio">audio</string>
    <string name="skype">skype</string>
    <string name="document">document</string>
    <string name="zoom">zoom</string>
    <string name="image">image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="add_group">Add Group</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="done">done</string>
    <string name="no_current_messages">No Current Messages</string>
    <string name="no_online_users">No Online Users</string>
    <string name="no_current_meetings">No Current Meetings</string>
    <string name="profile">Profile</string>
    <string name="away">away</string>
    <string name="showmore">Showmore</string>
    <string name="About">About</string>
    <string name="set_duration">Set duration</string>
    <string name="days">Days</string>
    <string name="comments">Comments</string>
    <string name="text_comment">Text Comment …</string>
    <string name="likes">Likes</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="set">Set</string>
    <string name="selected">Selected</string>
    <string name="out_of">out of</string>
    <string name="failed_to_like">Failed to like comment!</string>
    <string name="failed_to_remove_like">Failed to remove like!</string>
    <string name="add_question_poll">Please Add at least two question to the poll!</string>
    <string name="set_duration_poll">Please set the duration for the poll!</string>
    <string name="two_items_poll">Please enter at least two choices for your poll!</string>
    <string name="poll_publish_failed">Failed to publish poll please try again!</string>
    <string name="vote">Vote</string>
    <string name="num_of_people">Number of people</string>
    <string name="vote_check">Vote check</string>
    <string name="Post">Post</string>
    <string name="username">Name</string>
    <string name="title_interface">post</string>
    <string name="title_string">News Title </string>
    <string name="Details">Details</string>
    <string name="create_topic">Create Topic</string>
    <string name="Notifications">Notifications</string>
    <string name="post_publish_error">
        An error occurred while trying to publish post! Please try again!</string>
    <string name="Complaints">Complaints</string>
    <string name="title">we would like to hear from you</string>
    <string name="com_title">Complaints Title</string>
    <string name="defendant">Defendant</string>
    <string name="subject">Subject</string>
    <string name="send_btn">Send</string>
    <string name="Suggestion">Suggestion</string>
    <string name="suggest_title">Suggest Title</string>
    <string name="listSuggestion">List Suggestion</string>
    <string name="listComplaints">List Complaints</string>
    <string name="poll">Poll</string>
    <string name="agree_on_terms">Do you accept out app\'s terms of use?</string>
    <string name="cant_upload_until_terms_acceptance">You can\'t upload content untill you accept out terms and conditions!</string>
    <string name="policy_Privacy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="news">News</string>
    <string name="Courses">Courses</string>
    <string name="Polls">Polls</string>
    <string name="Aboutus">About us</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="alread_have_account">Already Have Account?</string>
    <string name="approve">Approve</string>
    <string name="user_requests">User Requests</string>
    <string name="BirthDay">Date of birth</string>
    <string name="PostRepored">Post Reported</string>
    <string name="leave_group">Leave group</string>
    <string name="edit_group">Edit group info</string>
    <string name="send_messages">Send messages</string>
    <string name="delete_group">Delete group</string>
    <string name="contact_us">Contact Us</string>
</resources>