<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news"
        android:title="@string/news" />
<!--    <item-->
<!--        android:id="@+id/awreaness_post"-->
<!--        android:title="@string/AwarenessPosts" />-->
    <item
        android:id="@+id/polls"
        android:title="@string/Polls" />

    <item
        android:id="@+id/courses"
        android:title="@string/Courses" />


    <item
        android:id="@+id/listComplaints"
        android:title="@string/listComplaints" />

    <item
        android:id="@+id/listSuggestion"
        android:title="@string/listSuggestion" />

    <item android:id="@+id/repotred"
        android:title="@string/PostRepored"
        />
    <item
        android:id="@+id/policy"
        android:title="@string/policy_Privacy" />


    <item
        android:id="@+id/about"
        android:title="@string/Aboutus" />


    <item
        android:id="@+id/user_requests"
        android:title="@string/user_requests" />

    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/log_out"
        android:title="@string/logout" />
</menu>