<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news"
        android:title="@string/news" />
    <!--
    <item
        android:id="@+id/awarenesspost"
        android:title="@string/AwarenessPosts" />
        -->
    <item
        android:id="@+id/polls"
        android:title="@string/poll" />

    <item
        android:id="@+id/complaints"
        android:title="@string/Complaints" />

    <item
        android:id="@+id/proposals"
        android:title="@string/Suggestion" />

    <item
        android:id="@+id/policy"
        android:title="@string/policy_Privacy" />


    <item
        android:id="@+id/about"
        android:title="@string/aboutus" />

    <item
        android:id="@+id/log_out"
        android:title="@string/logout" />
</menu>