<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/more"
        android:icon="@drawable/dots_more_icon"
        app:showAsAction="always">
        <menu>

            <item android:id="@+id/action_send_messages"
                android:title="@string/send_messages"
                android:icon="@drawable/send_icon"/>

            <item android:id="@+id/action_edit_group"
                android:title="@string/edit_group"
                android:icon="@drawable/ic_baseline_edit"/>

            <item android:id="@+id/action_delete_group"
                android:title="@string/delete_group"
                android:icon="@drawable/ic_baseline_delete_post"/>

        </menu>
    </item>
</menu>