<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/dots_more_icon"
        android:title="@string/more"
        app:showAsAction="always|collapseActionView">
        <menu>

            <item
                android:id="@+id/action_send_messages"
                android:icon="@drawable/send_icon"
                android:title="@string/send_messages"
                app:showAsAction="always" />


            <item
                android:id="@+id/action_edit_group"
                android:icon="@drawable/ic_baseline_edit"
                android:title="@string/edit_group" />

            <item
                android:id="@+id/action_leave_group"
                android:title="@string/leave_group"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>