<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.sign_up">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="99dp"
        android:layout_height="97dp"
        android:background="@drawable/profile_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="269dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_picture" />

    <EditText
        android:id="@+id/imput_password"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_username"
        app:layout_constraintStart_toStartOf="@+id/input_username"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <EditText
        android:id="@+id/imput_repassword"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_lock"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imput_password"
        app:layout_constraintStart_toStartOf="@+id/imput_password"
        app:layout_constraintTop_toBottomOf="@+id/imput_password" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imput_repassword"
        app:layout_constraintStart_toStartOf="@+id/imput_repassword"
        app:layout_constraintTop_toBottomOf="@+id/imput_repassword" />

    <EditText
        android:id="@+id/input_country"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_home"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_city"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_place"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_country"
        app:layout_constraintStart_toStartOf="@+id/input_country"
        app:layout_constraintTop_toBottomOf="@+id/input_country" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_phone"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_city"
        app:layout_constraintStart_toStartOf="@+id/input_city"
        app:layout_constraintTop_toBottomOf="@+id/input_city" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="147dp"
        android:layout_height="47dp"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_up"
        app:backgroundTint="@color/dark_green"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_birthday_cake"
        android:hint="@string/BirthDay"
        app:layout_constraintEnd_toEndOf="@+id/input_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_phone"
        app:layout_constraintTop_toBottomOf="@+id/input_phone" />

    <TextView
        android:id="@+id/back_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:shadowColor="@color/black"
        android:text="@string/alread_have_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>