<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@drawable/messaging_layout_back"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="7dp"
    android:gravity="center_vertical"
    android:layout_gravity="bottom"
    android:paddingBottom="7dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/micIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/mic_icon"
        android:contentDescription="@string/record_audio_message" />

    <ImageView
        android:id="@+id/cancelIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:layout_marginEnd="28dp"
        android:src="@drawable/cancel_icon"
        android:contentDescription="@string/record_audio_message" />

    <EditText
        android:id="@+id/messagingEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/text_message"
        android:background="@drawable/messaging_ed_back"
        android:fontFamily="@font/segoe_ui_light"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="7dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/messageAttachIv"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:src="@drawable/attach_icon"
        android:contentDescription="@string/attach_files" />

    <ImageView
        android:id="@+id/messageSendIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:visibility="visible"
        android:src="@drawable/send_icon"
        android:contentDescription="@string/send_message"
        />

</LinearLayout>