<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="158dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_recycle"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"

    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/admin_card_edge">
        <TextView
            android:id="@+id/ema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ema"
            app:layout_constraintTop_toBottomOf="@+id/ema" />

        <Spinner
            android:id="@+id/options"
            android:layout_width="114dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:elevation="50dp"
            android:entries="@array/persons_array"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pass"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            app:layout_constraintVertical_bias="0.129" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/approve_account"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="19dp"
            android:background="@drawable/btn_bg"
            android:elevation="50dp"
            android:text="@string/approve"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintStart_toEndOf="@+id/options"
            app:layout_constraintTop_toTopOf="@+id/options" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_account"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_create"
            android:elevation="50dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/approve_account"
            app:layout_constraintTop_toTopOf="@+id/approve_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>